syntax = "proto3";

package user;

option go_package = "./user";

message RegisterReq{
  string username = 1;
  string password = 2;
  string question = 3;
  string answer = 4;
  string uuid = 5;
}

message RegisterRes{
  bool status = 1;
  string description = 2;
}

message LoginReq{
  string username = 1;
  string password = 2;
}

message LoginRes{
  bool status = 1;
  string token = 2;
  string description = 3;
}

message changeReq {
  string old_password = 1;
  string new_password = 2;
  string username = 3;
}

message changeRes {
  bool status = 1;
  string description = 2;
}

service changePW {
  rpc changePW (changeReq) returns (changeRes);
}

service RegisterCenter{
  rpc Register(RegisterReq) returns (RegisterRes);
  rpc Login(LoginReq) returns(LoginRes);
}